fixed right margin on mobile on form appearing

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ main {
 }
 
 #getForm {
-    display: grid;
+    display: flex;
 }
 
 .libary {
